--- a/Koting/Koting/View/MyInfoStoryboard.storyboard
+++ b/Koting/Koting/View/MyInfoStoryboard.storyboard
@@ -185,41 +185,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yyC-l4-CMA" id="tG9-M5-j7e">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="zde-h4-MGa">
-                                                    <rect key="frame" x="32" y="15.5" width="311" height="49.5"/>
-                                                    <subviews>
-                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qGE-GK-XKw">
-                                                            <rect key="frame" x="0.0" y="0.0" width="311" height="30"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="30" id="REg-m8-SVv"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gN-MJ-5bf">
-                                                            <rect key="frame" x="0.0" y="35" width="311" height="14.5"/>
-                                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="49.5" id="gZh-zq-u87"/>
-                                                    </constraints>
-                                                </stackView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="zde-h4-MGa" firstAttribute="centerY" secondItem="tG9-M5-j7e" secondAttribute="centerY" id="T3p-zv-SX1"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="zde-h4-MGa" secondAttribute="trailing" constant="16" id="d9V-tO-bzZ"/>
-                                                <constraint firstItem="zde-h4-MGa" firstAttribute="leading" secondItem="tG9-M5-j7e" secondAttribute="leadingMargin" constant="16" id="naR-fb-pE6"/>
-                                                <constraint firstItem="zde-h4-MGa" firstAttribute="centerX" secondItem="tG9-M5-j7e" secondAttribute="centerX" id="slq-68-R4e"/>
-                                            </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="title" destination="qGE-GK-XKw" id="TEu-xu-7nq"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
@@ -249,7 +215,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VQx-jh-xTy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-359" y="-1164"/>
+            <point key="canvasLocation" x="-359.19999999999999" y="-1164.4677661169417"/>
         </scene>
         <!--Notice DetailVC-->
         <scene sceneID="yer-sS-f6C">
@@ -359,6 +325,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="0DG-Dz-65J">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
